--- a/aluraStyle.css
+++ b/aluraStyle.css
@@ -55,16 +55,20 @@ body{
     border: solid rgba(200,200,200) 2px;
 
 }
-/* .boton div{
-    margin: -15px;
- } */
+ 
 #actions .boton{
     margin: 50px 0px;
     width: 100%;
     height: 40px;
-    resize:inherit;
-
+    resize: inherit;
+    border-bottom: solid #000 2px;
 }
+
+.boton :hover{
+    border-bottom: solid rgb(205, 21, 21) 2px;
+
+ }
+
 .toLeft{
     background-image: linear-gradient(to left, rgba(180,180,180,1), rgba(255,255,255,0.75));
 }
