--- a/styles/aluraStyle.css
+++ b/styles/aluraStyle.css
@@ -1,72 +1,91 @@
 
 body{
-    background: rgba(240,248,255);
-    padding: 10px;
+    
+    background: rgba(240,255,240);
+    background: repeating-conic-gradient(
+    from 10deg at -100% 50%,
+    rgb(220,220,255),
+    rgb(240,240,255) 2deg 7deg,
+    rgb(220,220,255),
+    rgb(240,240,255) 15deg 20deg,
+    rgb(220,220,255) 25deg
+  );
+    padding: 2%;
     justify-content: center;
 
 }
+.icon{
+    margin: 0px 5px;
+text-decoration: none;
+display: inline-block;
 
-#bodyContainer{
+}
+header{
+    height: 48px;
+display:flex ;
+}
+h1{
+    color: #0A3871;
+    display: inline-block;
+    margin: auto 10px;
+
+}
+
+/* #bodyContainer{
     width: 100%;
     height: auto;
     display: flex;
     align-items:flex-start;
     justify-content: center;
 
-}
+} */
 
 #sector1{
-    background: rgba(230,230,235);
+    background: rgba(230,230,235,0.3);
     padding: 10px;
     border-radius: 12px;
-    /* ******************************************* */
-    width: 59.6%;
+    width: 58.5%;
     box-sizing: border-box;
-    /* ******************************************* */
-
     height: 100%;
-    margin: auto;
+    margin: 10px auto;
+    margin-right: 1%;
     display: inline-block;
      
 }
+h3,h6{
+    margin: 10px auto;
+}
 
 #sector3{
-    background: rgba(230,230,235);
+    background: rgba(230,230,235,0.3);
     padding: 10px;
     border-radius: 12px;
-    /* ******************************************* */
     width: 39.5%;
     box-sizing: border-box;
     vertical-align: top;
-    /* ******************************************* */
     height: 100%;
-    margin: auto;
+    margin: 10px auto;
     display: inline-block;
 }
 
 .boton{
     display: inline;
     text-align: center;
-    width: auto;
+    width: 45%;
     height: 30px;
-    margin: 0.83em auto;
+    margin: 10px auto;
     border-radius: 12px;
     cursor: pointer;
-    border: solid rgba(200,200,200) 2px;
+    border: none;
+    box-shadow:1px 2px 1px rgb(39, 72, 116);
 
 }
  
-.boton:hover{
-    border-bottom: solid rgb(205, 21, 21) 2px;
-    border-right: solid rgb(205, 21, 21) 2px;
-
- }
-
 .toLeft{
-    background-image: linear-gradient(to left, rgba(180,180,180,1), rgba(255,255,255,0.75));
+    background-image: linear-gradient(to left, rgb(200, 240, 255), rgb(150, 190, 200));
 }
 .toRigth{
-    background-image: linear-gradient(to right, rgba(180,180,180,1), rgba(255,255,255,0.75));
+    background-image: linear-gradient(to right, rgba(160,190,200), rgba(200,240,255));
  
 }
 
@@ -78,6 +97,7 @@ textarea{
     box-sizing: border-box;
     padding: 10px;
     font-size: 20px;
+    outline: none;
 }
 
 /* ************************Boton Copiar************************ */
@@ -87,15 +107,10 @@ textarea{
     width: 40px;
     border-radius: 100%;
     margin: 5px;
-    align-content: center;
     margin-top: -50px;
     cursor: pointer;
     position: absolute;
     box-sizing: border-box;
-
-
-
-
     
 }
 
@@ -107,14 +122,24 @@ textarea{
     background-color:transparent;
     margin: 2.5px auto;
 
+}
+.cp-pantalla{
+    height: 40.5px;
+    width: 40.5px;
+    border-radius: 50%;
+    position: absolute;
+    display: inline-block; 
+    /* background-color: rgba(200,200,200,0.3); */
+    background-color:transparent;
+    margin: -30px 0 0 -13px;
+    border: 1px solid #ccc;
+    z-index: 2;
 
 }
-
 
 .cp-sup{
     height: 30px;
     width: 25px;
-
     border-radius: 5px;
     position: absolute;
     display: inline-block; 
@@ -136,12 +161,41 @@ textarea{
     position: relative;
 }
 
-/* ************************Boton Copiar************************ */
+************************Boton Copiar************************
+/* .copiar{
+    width: fit-content;
+    height: fit-content;
+    border-radius: 100%;
+    background: rgba(255, 255, 255, 0);
+    border:none;
+    margin-top: -1000px;
+    box-sizing: border-box;
+ 
+}
+*/
+.boton:hover{
+    border-bottom: solid rgb(0,50,200) 2px;
 
+ }
 
-.hovers:hover{
+.cp-pantalla:hover{
 
-    border-radius: 15%  ;
-    background-color:#eee;
-    /* border: 2px solid #555; */
+    /* border-radius: 15%  ; */
+    background-color: rgba(230,230,235,0.3);
+    border: 2px solid rgb(230,230,235);
+
+}
+
+@media screen and (max-width:425px){
+    
+    #sector1{
+        width: 100%;
+        margin-top: 60px;
+
+    }
+    #sector3{
+        width: 100%;
+    }
+
+    
 }
