Agregado imagen y color

--- a/styles/aluraStyle.css
+++ b/styles/aluraStyle.css
@@ -4,11 +4,11 @@ body{
     background: rgba(240,255,240);
     background: repeating-conic-gradient(
     from 10deg at -100% 50%,
-    rgb(220,220,255),
+    rgb(205,220,255),
     rgb(240,240,255) 2deg 7deg,
-    rgb(220,220,255),
+    rgb(205,220,255),
     rgb(240,240,255) 15deg 20deg,
-    rgb(220,220,255) 25deg
+    rgb(205,220,255) 25deg
   );
     padding: 2%;
     justify-content: center;
@@ -31,14 +31,6 @@ h1{
 
 }
 
-/* #bodyContainer{
-    width: 100%;
-    height: auto;
-    display: flex;
-    align-items:flex-start;
-    justify-content: center;
-
-} */
 
 #sector1{
     background: rgba(230,230,235,0.3);
@@ -66,6 +58,20 @@ h3,h6{
     height: 100%;
     margin: 10px auto;
     display: inline-block;
+}
+
+.imagen_inicial{
+    max-width: 100%;
+    visibility: visible;
+    position: absolute;
+    width: 25%;
+    height: auto;
+    margin: 0px 3%;
+    border-radius: 12px;
+    box-sizing: content-box;
+    padding: 10px;
+    box-shadow: 2px 2px rgba(200, 200, 200, 0.5);
+
 }
 
 .boton{
