--- a/styles/aluraStyle.css
+++ b/styles/aluraStyle.css
@@ -61,15 +61,16 @@ h3,h6{
 }
 
 .imagen_inicial{
-    max-width: 100%;
+    max-width: 315px;
     visibility: visible;
     position: absolute;
     width: 25%;
-    height: auto;
+    max-height: 315px;
     margin: 0px 3%;
     border-radius: 12px;
     box-sizing: content-box;
     padding: 10px;
+    margin-left: -32%;
     box-shadow: 2px 2px rgba(200, 200, 200, 0.5);
 
 }
@@ -192,5 +193,9 @@ textarea{
         width: 100%;
     }
 
-    
+    .imagen_inicial{
+        max-width: 90%;
+        width: 85%;
+        margin-left: -90%;
+    }
 }
