--- a/styles/aluraStyle.css
+++ b/styles/aluraStyle.css
@@ -10,14 +10,15 @@ body{
     rgb(240,240,255) 15deg 20deg,
     rgb(205,220,255) 25deg
   );
-    padding: 2%;
+    /* padding: 2%; */
     justify-content: center;
 
 }
 
 header{
     height: 48px;
-display:flex ;
+    display:flex ;
+    margin: 2% 2% 0 2%;
 }
 h1{
     color: #0A3871;
@@ -31,11 +32,11 @@ h1{
     background: rgba(230,230,235,0.3);
     padding: 10px;
     border-radius: 12px;
-    width: 58.5%;
+    width: 58%;
     box-sizing: border-box;
     height: 100%;
-    margin: 10px auto;
-    margin-right: 1%;
+    margin: 10px .5% 10px 2%;
+    /* margin-right: 1%; */
     display: inline-block;
      
 }
@@ -47,11 +48,11 @@ h3,h5{
     background: rgba(230,230,235,0.3);
     padding: 10px;
     border-radius: 12px;
-    width: 39.5%;
+    width: 36.1%;
     box-sizing: border-box;
     vertical-align: top;
     height: 100%;
-    margin: 10px auto;
+    margin: 10px 2% 10px .5%;
     display: inline-block;
 }
 
@@ -65,7 +66,7 @@ h3,h5{
     border-radius: 12px;
     box-sizing: content-box;
     padding: 10px;
-    margin-left: -32%;
+    margin-left: -30%;
     box-shadow: 2px 2px rgba(200, 200, 200, 0.5);
 
 }
@@ -75,7 +76,7 @@ h3,h5{
     text-align: center;
     width: 45%;
     height: 30px;
-    margin: 10px auto;
+    margin: 10px 1%;
     border-radius: 12px;
     cursor: pointer;
     border: none;
@@ -92,7 +93,7 @@ h3,h5{
 }
 
 textarea{
-    width: 100%;
+    width: 99%;
     resize:unset;  
     border-radius: 15px;
     border-color: aliceblue;
@@ -100,6 +101,7 @@ textarea{
     padding: 10px;
     font-size: 20px;
     outline: none;
+    margin: auto .5%;
 }
 
 /* ************************Boton Copiar************************ */
@@ -108,7 +110,7 @@ textarea{
     height: 40px;
     width: 40px;
     border-radius: 100%;
-    margin: 5px;
+    margin: 10px;
     margin-top: -50px;
     cursor: pointer;
     position: absolute;
@@ -171,38 +173,57 @@ textarea{
  }
 
 .cp-pantalla:hover{
-
     background-color: rgba(230,230,235,0.3);
     border: 2px solid rgb(230,230,235);
-
 }
 
 .compartir{
-    margin: 20px 10px 50px 5px;
+    margin: 20px 3% 50px 3%;
+    padding: 10px auto;
     visibility: hidden;
-
+    box-sizing: border-box;
 }
 
 .icon{
     margin: 0px 3px;
+    padding: 4px 8px;
     text-decoration: none;
     display: inline-block;
-    border: none;
-    border-radius: 50%;
+    border: 2px solid rgba(200, 200, 200, 0.1);
+    border-radius: 80%;
     background-color: transparent;
+}
+footer .icon:hover{
+    background: rgba(200,200,255,0.9);
+    border: 2px solid #fff;
+    box-sizing: border-box;
 
 }
 
 footer{
     margin-top: 15px;
-    background: rgba(200,200,235,0.5);
     width: 100%;
-    border-radius: 12px;
+    padding: 6px 2%;
+    box-sizing: border-box;
 
 }
+footer div{
+    border: 4px solid #0A3871;
+    background: rgba(200,200,235,0.4);
+    border-radius: 12px;
+    box-sizing: border-box;
+    text-align: center;
+
+}
+footer div h4{
+    margin: 4px auto;
+}
+
 footer section{
-    align-items: center;
-    margin: 10px auto;
+    width: 100%;
+    margin: 3px auto;
+    /* box-sizing: border-box; */
+
 }
 
 @media screen and (max-width:425px){
