--- a/styles/aluraStyle.css
+++ b/styles/aluraStyle.css
@@ -36,7 +36,6 @@ h1{
     box-sizing: border-box;
     height: 100%;
     margin: 10px .5% 10px 2%;
-    /* margin-right: 1%; */
     display: inline-block;
      
 }
@@ -66,7 +65,7 @@ h3,h5{
     border-radius: 12px;
     box-sizing: content-box;
     padding: 10px;
-    margin-left: -30%;
+    margin-left: -31%;
     box-shadow: 2px 2px rgba(200, 200, 200, 0.5);
 
 }
@@ -227,19 +226,29 @@ footer section{
 }
 
 @media screen and (max-width:425px){
-    
-    #sector1{
-        width: 100%;
-        margin-top: 60px;
-
+    /* #sector1{
+        padding: 10px;
+        width: 58%;
+        margin: 10px .5% 10px 2%;
     }
     #sector3{
-        width: 100%;
+        padding: 10px;
+        width: 36.1%;
+        margin: 10px 2% 10px .5%;
+    } */
+    
+    
+    #sector1{
+        width: 95%;
+        margin-top: 60px;
+    }
+    #sector3{
+        width: 95%;
     }
 
     .imagen_inicial{
         max-width: 90%;
-        width: 85%;
+        width: 82%;
         margin-left: -90%;
     }
 }
